completed dlx doc, editor fixes and dlx overflow handling

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,6 +3,7 @@
 
 .CodeMirror
     font-size: 1.5rem
+    height: 60%
     .runned
         background-color: #ffff002b
         .CodeMirror-linenumber.CodeMirror-gutter-elt
@@ -11,6 +12,9 @@
         background-color: #00ff002b
         .CodeMirror-linenumber.CodeMirror-gutter-elt
             background-color: #00ff002b
+
+.mat-drawer-content.mat-sidenav-content .main
+    height: 100%
 
 mat-toolbar a
     span
